further improved `main` view to look more like a similar site. no luck with using masonry as an HTML tag. resolved by setting width to 31.333% to avoid over-wrapping

--- a/client/app/main/main.css
+++ b/client/app/main/main.css
@@ -80,10 +80,10 @@
 }
 
 .masonry-brick {
-  width: 33.333%;
-  border: 1px solid gray;
+  width: 31.333%;
+  border: 1px solid lightgray;
   border-radius: 5px;
-  padding: 5px;
+  /*padding: 5px;*/
   background-color: white;
 }
 
